ui structure: completed

--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,5 +1,5 @@
-@import "components/buttons";
-@import "components/cards";
+@import "components/_buttons";
+@import "components/_cards";
 @import "core/_variables";
 @import "core/_reset";
-@import "layout/main";
+@import "layout/_layout";
