--- a/sass/core/_variables.scss
+++ b/sass/core/_variables.scss
@@ -2,10 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish&family=Rokkitt:wght@700&display=swap');
 
 $regularFont: 'Mulish',sans-serif;
-$headerFont:  'Rokkit',serif;
+$headerFont:  'Rokkitt',serif;
 $regularFontSize: 16px;
 $boldFontSize:32px;
 
 $primaryColor: #046586;
 $placeholderColor:#717A90;
-$bgColor:#F0D3D3;
+$bgColor:#F8EFEF;
+$defaultCardColor:#FFFFFF;
+$tertiaryColor:#CAD6E4;
