--- a/sass/app.scss
+++ b/sass/app.scss
@@ -2,4 +2,8 @@
 
 body{
     background-color: $bgColor;
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
 }
