--- a/sass/core/_variables.scss
+++ b/sass/core/_variables.scss
@@ -1,5 +1,7 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 @import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mulish&family=Rokkitt:wght@700&display=swap');
+
 
 $regularFont: 'Mulish',sans-serif;
 $headerFont:  'Rokkitt',serif;
@@ -11,3 +13,4 @@ $placeholderColor:#717A90;
 $bgColor:#F8EFEF;
 $defaultCardColor:#FFFFFF;
 $tertiaryColor:#CAD6E4;
+$fontColor:#161843;
