--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -7,6 +7,14 @@
     padding-left: 2rem;
 }
 
+
+.container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 4rem;
+    padding-left: 4rem;
+}
+
 .row {
     box-sizing: border-box;
     display: -ms-flexbox;
