--- a/sass/components/_cards.scss
+++ b/sass/components/_cards.scss
@@ -1,14 +1,16 @@
 @import"../core/variables";
+@import"../components/buttons";
 
 .big-card{
     width: 1057px;
     height: 709px;
     border: 1px solid white;
     background-color: $defaultCardColor;
-    border-radius: 10px;
+    border-radius: 50px;
     -webkit-box-shadow: -11px 10px 62px 14px rgba(240,211,211,1);
     -moz-box-shadow: -11px 10px 62px 14px rgba(240,211,211,1);
     box-shadow: -11px 10px 62px 14px rgba(240,211,211,1);
+    overflow: hidden;
 
     .card-img{
         width: 40%;
@@ -25,7 +27,46 @@
         .card-title{
             font-family: $headerFont;
             font-size: $boldFontSize;
+            color: $fontColor;
+            margin-top: 5rem;
+            margin-bottom: 1.5rem;
             
         }
+
+        .card-subtitle{
+            color: $fontColor;
+            width: 70%;
+            font-family: $regularFont;
+
+        }
+        .email-field{
+            border:1px solid $tertiaryColor;
+            padding:1.8rem 2rem;
+            width: 100%;
+            margin-bottom: 2rem;
+            border-radius: 5px;
+        }
+
+        .row.between-xs:first-of-type div a{
+            display: inline-block;
+            color: $primaryColor;
+            text-decoration: none;
+            font-size: 18px;
+            margin-bottom: 2.5rem;
+        }
+
+        .social-title{
+            font-family: $regularFont;
+            font-size: $regularFontSize;
+            color: $tertiaryColor;
+        }
+
+        .link{
+            color: $primaryColor;
+            text-decoration: none;
+        }
+
+
+        
     }
 }
